tests/baselines/reference/overloadResolutionOverCTLambda.errors.txt
==== tests/cases/compiler/overloadResolutionOverCTLambda.ts (2 errors) ====
    function foo(b: (item: number) => boolean) { }
    foo(a => a); // can not convert (number)=>bool to (number)=>number
    ~~~
!!! error TS2082: Supplied parameters do not match any signature of call target:
!!! 	Call signatures of types '(a: number) => number' and '(item: number) => boolean' are incompatible.
    ~~~
!!! error TS2087: Could not select overload for 'call' expression.